# myCADSystem

./: .gitignore  CMakeLists.txt  README.md  contextmenu.h  glwidget.cpp  glwidget.h  invers.h  main.cpp  mainwindow.cpp  mainwindow.h  matrix.h  menubar.cpp  menubar.h  myCADSystem.pro  paintingzone.cpp  paintingzone.h  resource.h  statusbar.cpp  statusbar.h  work.cpp  work.h
lib/: container.cpp  container.h  element.cpp  element.h  lib.h
lib/action/: action.cpp  action.h  group.cpp  group.h  intersection.cpp  intersection.h  rotate.cpp  rotate.h  scale.cpp  scale.h  stretch.h  subtraction.cpp  subtraction.h  translate.cpp  translate.h
lib/lib_action/: action.h  intersection.cpp  rotate.h
lib/lib_primitive/: primitive.cpp
lib/primitive/: cube.cpp  cube.h  group_primitive.cpp  group_primitive.h  groupprimitive.cpp  groupprimitive.h  intersectprimitive.cpp  intersectprimitive.h  primitive.cpp  primitive.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h  substractprimitive.cpp  substractprimitive.h
src/: GLWidget.cpp  GLWidget.h  Work.cpp  Work.h  constants.h  contextmenu.cpp  gl-widget.cpp  gl-widget.h  glwidget.cpp  glwidget.h  invers.h  main.cpp  mainwindow.cpp  mainwindow.h  matrix.h  menubar.cpp  paintingzone.h  resource.h  work.cpp  work.h
src/Domain/: Action.cpp  Action.h  Container.cpp  Container.h  Element.cpp  Element.h  Primitive.cpp  Primitive.h
src/Domain/Action/: Group.cpp  Group.h  Intersection.h  Rotate.h  Scale.cpp  Scale.h  Stretch.cpp  Stretch.h  Subtraction.h  Translate.cpp  Translate.h
src/Domain/Primitive/: Cube.h  GroupPrimitive.h  IntersectPrimitive.h  Pyramid.cpp  Pyramid.h  Sphere.h  SubstractPrimitive.h
src/domain/: action.cpp  action.h  container.cpp  container.h  element.cpp  element.h  primitive.cpp  primitive.h
src/domain/action/: group.cpp  group.h  intersection.cpp  intersection.h  rotate.cpp  rotate.h  scale.cpp  scale.h  stretch.cpp  stretch.h  subtraction.h  translate.cpp  translate.h
src/domain/primitive/: cube.cpp  cube.h  group-primitive.cpp  group-primitive.h  intersect-primitive.cpp  intersect-primitive.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h  substract-primitive.cpp  substract-primitive.h
src/gui/: ContextMenu.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  PaintingZone.cpp  PaintingZone.h  StatusBar.cpp  context-menu.cpp  context-menu.h  contextmenu.cpp  contextmenu.h  main-window.cpp  main-window.h  mainwindow.h  menu-bar.cpp  menu-bar.h  menubar.cpp  painting-zone.cpp  painting-zone.h  paintingzone.h  status-bar.cpp  status-bar.h
src/gui/toolbars/: ActionPrimitiveToolBar.cpp  ActionPrimitiveToolBar.h  ListPrimitiveToolbar.cpp  ListPrimitiveToolbar.h  SceneControlToolbar.cpp  SceneControlToolbar.h  SelectPrimitiveToolbar.cpp  ToolBar.cpp  action_primitive_toolbar.cpp  action_primitive_toolbar.h  list_primitive_toolbar.cpp  list_primitive_toolbar.h  scene_control_toolbar.cpp  select_primitive_toolbar.cpp  select_primitive_toolbar.h  toolbar.cpp  toolbar.h
src/lib/: Container.cpp  Container.h  Element.cpp  container.h  element.cpp  element.h  lib.h
src/lib/action/: Action.cpp  Action.h  Group.h  Intersection.cpp  Intersection.h  Rotate.cpp  Rotate.h  Scale.h  Stretch.h  Subtraction.h  Translate.h  action.cpp  action.h  group.h  intersection.h  rotate.cpp  rotate.h  scale.h  stretch.cpp  stretch.h  subtraction.h  translate.h
src/lib/lib_action/: action.cpp  action.h  group.h  intersection.h  rotate.h  subtraction.cpp  subtraction.h  translate.cpp  translate.h
src/lib/lib_primitive/: cube.h  primitive.cpp  primitive.h  pyramid.cpp  pyramid.h
src/lib/primitive/: Cube.cpp  Cube.h  GroupPrimitive.cpp  GroupPrimitive.h  IntersectPrimitive.cpp  IntersectPrimitive.h  Primitive.cpp  Primitive.h  Pyramid.h  Sphere.cpp  Sphere.h  SubstractPrimitive.cpp  SubstractPrimitive.h  cube.h  groupprimitive.h  intersectprimitive.cpp  intersectprimitive.h  primitive.h  pyramid.cpp  pyramid.h  sphere.h  substractprimitive.cpp  substractprimitive.h
src/toolbars/: action_primitive_toolbar.cpp  action_primitive_toolbar.h  list_primitive_toolbar.cpp  list_primitive_toolbar.h  scene_control_toolbar.cpp  scene_control_toolbar.h  select_primitive_toolbar.cpp  select_primitive_toolbar.h  toolbar.cpp
toolbars/: action_primitive_toolbar.cpp  action_primitive_toolbar.h  list_primitive_toolbar.cpp  list_primitive_toolbar.h  scene_control_toolbar.cpp  scene_control_toolbar.h  select_primitive_toolbar.cpp  select_primitive_toolbar.h  toolbar.cpp  toolbar.h
